packages/taquito-michel-codec/test/contracts_015/ill_typed/stack_bottom_undipable.tz
parameter unit;
storage unit;
code {
       DIP { DUP };
     }
